<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GasMileageUtility</string>
    <string name="action_settings">Settings</string>
    <string name="entry_header_description">Enter Gas Mileage Info</string>
    <string name="drawer_icon_description">Navigation Drawer Icon</string>
    <string name="current_mileage_hint">Enter Current Gas Mileage</string>
    <string name="gallons_filled">Enter Gallons Filled</string>
    <string name="enter_mileage_info_button">Submit Data</string>
    <string name="current_profile_label">Current Profile: </string>
    <string name="settings_title">Settings</string>
    <string name="help_title">Help</string>
    <string name="about_title">About</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_closed">Close Drawer</string>
    <string name="title_activity_about">About Gas Mileage Utility</string>
    <string name="version">Gas Mileage Utility - v</string>
    <string name="contact_info">Contact Info:</string>
    <string name="gmail_address">kformeck@gmail.com</string>
    <string name="copyright">Developed by Kyle Formeck</string>
    <string name="about_paragraph">
        Gas Mileage Utility is a free android application that allows you to track your gas usage on every vehicle you own. It provides statistics so you can increase your miles per gallon.
    </string>
    <string-array name="account_editor_view_titles">
        <item>Add</item>
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
    <string-array name="drawer_list_titles">
        <item>New Mileage Record</item>
        <item>Manage Accounts</item>
        <item>Nearest Gas Station</item>
        <item>View Statistics</item>
    </string-array>

</resources>
